# chip8-interpreter-debugger

./: CMakeLists.txt  Findcurses.cmake  README.md
make/: CMakeCache.txt  Makefile  chip8-interpreter-debugger  chip8Interpreter  cmake_install.cmake
src/: chip8.c  chip8.h  main.c  utils.c  utils.h
